try to fix spacing for iPhone

--- a/src/Background.module.scss
+++ b/src/Background.module.scss
@@ -5,7 +5,6 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   z-index: -1;
 }
 
